--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +12,9 @@
 </head>
 <body>
     <section>
-        <a id="logoFCA" href="file:///C:/Users/Daniel/OneDrive/%C3%81rea%20de%20Trabalho/HTML%20VS/linktree.html"target = "_blank"><img src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/344/external-cake-mother-day-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"  
+        <a href="https://daniellelisfernando.github.io/linktree"target = "_blank"><img src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/344/external-cake-mother-day-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"  
            alt="logo FCA"></a>   
-           <a href="file:///C:/Users/Daniel/OneDrive/%C3%81rea%20de%20Trabalho/HTML%20VS/linktree.html"target = "_blank"><h1>BOLOS E DOCES</h1></a>  
+           <a href="https://daniellelisfernando.github.io/linktree"target = "_blank"><h1>BOLOS E DOCES</h1></a>  
     </section> 
 <nav>
     <ul>
@@ -22,12 +22,6 @@
         <a href="https://api.whatsapp.com/send?phone=5531992720833" target="_blank"><img src = "https://img.icons8.com/3d-fluency/100/whatsapp.png"
            alt="logo wpp"></a>
         </li>
-        <!--<li>
-        <a href="https://www.shopee.com.br" target="_blank"><img src="https://img.icons8.com/fluency/2x/shopee.png"
-           alt="logo shopee"></a>
-        <a href="https://www.google.com" target="_blank"><img src="https://img.icons8.com/fluency/2x/google-logo.png"
-           alt="logo google"></a>
-        </li>-->
         <li>
         <a href="https://www.facebook.com/andreia.pinheiro.9849912" target="_blank"><img src="https://img.icons8.com/fluency/2x/facebook-new.png"
            alt="logo facebook"></a>
@@ -45,9 +39,3 @@
     </p>
 </footer>
 </html>
-
-
-<!--    TAG PARA INSERIR IMAGEM
-        <img src = "https://img.icons8.com/fluency/2x/google-logo.png" target="_blank"  
-        alt = "logo google">
--->
