--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+# http-daniellelisfernando.github.io-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,26 +9,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleslinktree.css">
-    <title>FEITOS COM AMOR</title>
+    <title>LINKTREE</title>
 </head>
 <body>
     <section>
-        <a href="https://daniellelisfernando.github.io/linktree"target = "_blank"><img src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/344/external-cake-mother-day-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"  
-           alt="logo FCA"></a>   
-           <a href="https://daniellelisfernando.github.io/linktree"target = "_blank"><h1>BOLOS E DOCES</h1></a>  
+        <a href="https://daniellelisfernando.github.io/linktree/"target = "_blank"><img src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/344/external-cake-mother-day-vitaliy-gorbachev-lineal-color-vitaly-gorbachev.png"  
+           alt="logo"></a>   
+           <a href="https://daniellelisfernando.github.io/linktree/"target = "_blank"><h1>BOLOS E DOCES</h1></a>  
     </section> 
 <nav>
     <ul>
         <li>
-        <a href="https://api.whatsapp.com/send?phone=5531992720833" target="_blank"><img src = "https://img.icons8.com/3d-fluency/100/whatsapp.png"
+        <a href="https://api.whatsapp.com/send?phone=5531996484818" target="_blank"><img src = "https://img.icons8.com/3d-fluency/100/whatsapp.png"
            alt="logo wpp"></a>
         </li>
         <li>
-        <a href="https://www.facebook.com/andreia.pinheiro.9849912" target="_blank"><img src="https://img.icons8.com/fluency/2x/facebook-new.png"
+        <a href="https://www.instagram.com/letsavethebacon" target="_blank"><img src="https://img.icons8.com/fluency/2x/facebook-new.png"
            alt="logo facebook"></a>
         </li>
         <li>
-        <a href="https://www.instagram.com/feitoscoma.mor/" target="_blank"><img src="https://img.icons8.com/fluency/2x/instagram-new.png" 
+        <a href="https://www.instagram.com/letsavethebacon" target="_blank"><img src="https://img.icons8.com/fluency/2x/instagram-new.png" 
            alt="logo instagram"></a>
         </li>
     </ul>
